# Gitops_Portal

./: README.md  docker-compose.yaml
.github/workflows/: ci-cpp.yaml  ci-go.yaml  ci-node.yaml  ci-python.yaml  deploy.yaml  reusable-build.yaml
backstage/: Dockerfile  app-config.production.yaml  app-config.yaml  catalog-info.yaml  package.json
backstage/templates/microservice-cpp/skeleton/: CMakeLists.txt  Dockerfile  catalog-info.yaml
backstage/templates/microservice-cpp/skeleton/src/: main.cpp
deployments/argocd/: argocd-install.yaml
deployments/base/: kustomization.yaml  namespace.yaml
docs/: architecture.md  gitops-workflow.md  onboarding.md
docs/runbooks/: incident-response.md
observability/grafana/: grafana-deploy.yaml
observability/k8s/: observability-stack.yaml
observability/otel-collector/: config.yaml  docker-config.yaml
observability/prometheus/: docker-prometheus.yaml  prometheus.yaml
platform-api/: Dockerfile  main.py  requirements.txt
policies/network/: network-policies.yaml
policies/opa/: constraints.yaml
policies/rbac/: k8s-rbac.yaml
policies/secrets/: sealed-secrets.yaml
services/api-gateway/: Dockerfile  package.json
services/order-service/: Dockerfile  catalog-info.yaml  go.mod  main.go  main_test.go
services/pricing-engine/: CMakeLists.txt  Dockerfile
services/pricing-engine/src/: http_server.cpp  http_server.h  main.cpp  metrics.cpp  metrics.h  pricing_engine.cpp  pricing_engine.h
services/pricing-engine/tests/: test_pricing.cpp
services/user-service/: Dockerfile  requirements-dev.txt  requirements.txt
(+54 files in other folders)
